--- a/Silencer/package.json
+++ b/Silencer/package.json
@@ -14,6 +14,8 @@
     "@react-navigation/native": "^5.6.1",
     "@react-navigation/stack": "^5.6.2",
     "@types/react-native-vector-icons": "^6.4.5",
+    "@types/react-redux": "^7.1.9",
+    "@types/uuid": "^8.0.0",
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-chart-kit": "^6.2.3",
@@ -22,7 +24,10 @@
     "react-native-safe-area-context": "^3.0.7",
     "react-native-screens": "^2.9.0",
     "react-native-svg": "^12.1.0",
-    "react-native-vector-icons": "^7.0.0"
+    "react-native-vector-icons": "^7.0.0",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
+    "uuid": "^8.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
