--- a/Silencer/package.json
+++ b/Silencer/package.json
@@ -20,6 +20,7 @@
     "react-native": "0.62.2",
     "react-native-chart-kit": "^6.2.3",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-get-random-values": "^1.4.0",
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "^3.0.7",
     "react-native-screens": "^2.9.0",
