--- a/Silencer/package.json
+++ b/Silencer/package.json
@@ -24,6 +24,7 @@
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "^3.0.7",
     "react-native-screens": "^2.9.0",
+    "react-native-snackbar": "^2.2.3",
     "react-native-svg": "^12.1.0",
     "react-native-vector-icons": "^7.0.0",
     "react-redux": "^7.2.0",
