--- a/Silencer/package.json
+++ b/Silencer/package.json
@@ -13,9 +13,11 @@
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.6.1",
     "@react-navigation/stack": "^5.6.2",
+    "@types/axios": "^0.14.0",
     "@types/react-native-vector-icons": "^6.4.5",
     "@types/react-redux": "^7.1.9",
     "@types/uuid": "^8.0.0",
+    "axios": "^0.19.2",
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-chart-kit": "^6.2.3",
