--- a/Silencer/package.json
+++ b/Silencer/package.json
@@ -10,13 +10,13 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.11.0",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.6.1",
     "@react-navigation/stack": "^5.6.2",
     "@types/axios": "^0.14.0",
     "@types/react-native-vector-icons": "^6.4.5",
     "@types/react-redux": "^7.1.9",
-    "@types/uuid": "^8.0.0",
     "axios": "^0.19.2",
     "react": "16.11.0",
     "react-native": "0.62.2",
@@ -30,8 +30,7 @@
     "react-native-svg": "^12.1.0",
     "react-native-vector-icons": "^7.0.0",
     "react-redux": "^7.2.0",
-    "redux": "^4.0.5",
-    "uuid": "^8.2.0"
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
