--- a/Silencer/package.json
+++ b/Silencer/package.json
@@ -14,9 +14,6 @@
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.6.1",
     "@react-navigation/stack": "^5.6.2",
-    "@types/axios": "^0.14.0",
-    "@types/react-native-vector-icons": "^6.4.5",
-    "@types/react-redux": "^7.1.9",
     "axios": "^0.21.1",
     "react": "16.11.0",
     "react-native": "0.62.3",
@@ -27,7 +24,7 @@
     "react-native-safe-area-context": "^3.0.7",
     "react-native-screens": "^2.9.0",
     "react-native-snackbar": "^2.2.3",
-    "react-native-svg": "^12.1.0",
+    "react-native-svg": "12.1.0",
     "react-native-vector-icons": "^7.0.0",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5"
@@ -36,18 +33,12 @@
     "@babel/core": "^7.6.2",
     "@babel/runtime": "^7.6.2",
     "@react-native-community/eslint-config": "^1.0.0",
-    "@types/jest": "^24.0.24",
-    "@types/react-native": "^0.62.0",
-    "@types/react-test-renderer": "16.9.2",
-    "@typescript-eslint/eslint-plugin": "^2.27.0",
-    "@typescript-eslint/parser": "^2.27.0",
     "babel-jest": "^24.9.0",
     "eslint": "^6.5.1",
     "jest": "^24.9.0",
     "metro-react-native-babel-preset": "^0.58.0",
     "prettier": "^2.0.4",
-    "react-test-renderer": "16.11.0",
-    "typescript": "^3.8.3"
+    "react-test-renderer": "16.11.0"
   },
   "jest": {
     "preset": "react-native",
